--- a/examples/online_test.html
+++ b/examples/online_test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Testing</title>
     <link rel="stylesheet"
-        href="https://raw.githubusercontent.com/zserub/MELFA-highlight.js/main/dist/melfa_dark.min.css">
+        href="https://zserub.github.io/MELFA-highlight.js/dist/melfa_dark.min.css">
 </head>
 
 <body style="background-color: #23241F; color: #fff;">
@@ -50,7 +50,7 @@
 
     </code></pre>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
-    <script src="https://raw.githubusercontent.com/zserub/MELFA-highlight.js/main/dist/melfa.min.js"></script>
+    <script src="https://zserub.github.io/MELFA-highlight.js/dist/melfa.min.js"></script>
     <script>hljs.highlightAll();</script>
 </body>
 
