--- a/examples/offline_test.html
+++ b/examples/offline_test.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Testing</title>
-    <link rel="stylesheet"
-        href="d:\Github\highlight.js\extra\MELFA-highlight.js\src\themes\melfa_dark.css">
+    <link rel="stylesheet" href="d:\Github\highlight.js\extra\MELFA-highlight.js\dist\melfa_dark.min.css">
+        <!-- href="d:\Github\highlight.js\extra\MELFA-highlight.js\src\themes\melfa_dark.css" -->
 </head>
 
 <body style="background-color: #23241F; color: #fff; font-size: 20px;">
