--- a/examples/online_test.html
+++ b/examples/online_test.html
@@ -8,7 +8,7 @@
         href="https://zserub.github.io/MELFA-highlight.js/dist/melfa_dark.min.css">
 </head>
 
-<body style="background-color: #23241F; color: #fff;">
+<body style="background-color: #23241F; color: #fff; font-size: 20px;">
     <pre><code class="language-melfa">
 28 'Initialize variables
 29 GoSub *INIT
